[gd_scene load_steps=6 format=3 uid="uid://dqo2lrxl5di8o"]

[ext_resource type="Script" path="res://Scripts/QuadrantTerrain/BlockCore.gd" id="1_dt8bo"]
[ext_resource type="Texture2D" uid="uid://bkqkbj26vyaw7" path="res://Textures/Black Image.png" id="2_ikvkl"]
[ext_resource type="Resource" uid="uid://c4t8evy2q7rgi" path="res://Resources/Audio/QuadrantCoreDestroyed.tres" id="3_ar8vc"]
[ext_resource type="Script" path="res://Scripts/Components/Health.gd" id="3_j3i4g"]
[ext_resource type="PackedScene" uid="uid://b3yv6n2td4emd" path="res://Scenes/Components/SoundEffectComponent2D.tscn" id="4_7m2w8"]

[node name="BlockCore" type="StaticBody2D"]
show_behind_parent = true
light_mask = 128
visibility_layer = 128
z_index = -1
position = Vector2(838, 501)
collision_layer = 256
collision_mask = 192
script = ExtResource("1_dt8bo")
placed_in_level = true
poly_texture = ExtResource("2_ikvkl")
hit_sound_effect = ExtResource("3_ar8vc")
polygon_shape = 4
cir_radius = 150.0
cir_smoothing = 2
s_p_number = 15
s_a = 100.0
s_b = 100.0
s_start_angle_deg = 45.0
e_n = 2.0
min_n1 = 0.3
n1 = 0.5
min_n2 = 0.3
n2 = 0.5
min_n3 = 0.3
n3 = 0.5

[node name="Health" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_j3i4g")

[node name="HitSoundComponent" parent="." instance=ExtResource("4_7m2w8")]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Line2D" type="Line2D" parent="Polygon2D"]

[node name="Center" type="Polygon2D" parent="."]

[node name="SlowDownTimer" type="Timer" parent="."]

[node name="ShatterVisualizer" type="Polygon2D" parent="."]
modulate = Color(0.69, 0.496, 0, 1)

[node name="ShatterLine2D" type="Line2D" parent="ShatterVisualizer"]

[connection signal="timeout" from="SlowDownTimer" to="." method="_on_slow_down_timer_timeout"]
